--- a/package.json
+++ b/package.json
@@ -1,30 +1,14 @@
 {
-  "name": "react-native-module-template",
-  "version": "2.3.2",
-  "description": "A starter for the React Native library written in TypeScript, with linked example project and optional native code in Swift and Kotlin.",
-  "homepage": "https://github.com/demchenkoalex/react-native-module-template#readme",
+  "name": "react-native-drop-down-modal",
+  "version": "1.0.0",
+  "description": "",
+  "homepage": "https://github.com/krishnapaul242/react-native-drop-down-modal#readme",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "author": "Alex Demchenko <alexdemchenko@yahoo.com>",
+  "author": "Krishna Paul <me@krishnapaul.in>",
   "license": "MIT",
   "files": [
-    "android",
-    "ios",
-    "lib",
-    "react-native-module-template.podspec",
-    "!android/build",
-    "!.DS_Store",
-    "!.gradle",
-    "!.idea",
-    "!build",
-    "!gradle",
-    "!*.iml",
-    "!gradlew",
-    "!gradlew.bat",
-    "!local.properties",
-    "!project.xcworkspace",
-    "!xcshareddata",
-    "!xcuserdata"
+    "lib"
   ],
   "scripts": {
     "compile": "rm -rf lib && tsc -p .",
@@ -39,6 +23,7 @@
     "@types/jest": "^27.0.3",
     "@types/react-native": "^0.66.5",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/react-native-modal": "^4.1.1",
     "babel-jest": "^27.3.1",
     "eslint": "^7.32.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
@@ -51,7 +36,8 @@
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-modal": "*"
   },
   "jest": {
     "preset": "react-native",
