added readme and made title optional

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-drop-down-modal",
+  "name": "react-native-dropdown-step",
   "version": "1.0.0",
-  "description": "",
+  "description": "An easy to use dropdown step component for React Native",
   "homepage": "https://github.com/krishnapaul242/react-native-drop-down-modal#readme",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
