--- a/package.json
+++ b/package.json
@@ -3,6 +3,20 @@
   "version": "1.1.4",
   "description": "An easy to use dropdown step component for React Native",
   "homepage": "https://github.com/krishnapaul242/react-native-drop-down-modal#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/krishnapaul242/react-native-drop-down-modal.git"
+  },
+  "keywords": [
+    "react",
+    "react-native",
+    "dropdown",
+    "drop-down",
+    "step",
+    "modal",
+    "type-safe",
+    "typescript"
+  ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "author": "Krishna Paul <me@krishnapaul.in>",
